tests/snapshots/cmd_generate_jobs__job_continue_on_error.snap
---
source: tests/cmd_generate_jobs.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Unstable", {
      runs_on: "ubuntu-latest",
      continue_on_error: true,
      steps() { run("echo might fail") }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  unstable:
    name: Unstable
    runs-on: ubuntu-latest
    continue-on-error: true
    steps:
    - id: step_0
      run: echo might fail
