tests/snapshots/cmd_generate_jobs__job_if_literal.snap
---
source: tests/cmd_generate_jobs.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Deploy", {
      runs_on: "ubuntu-latest",
      if: "github.ref == 'refs/heads/main'",
      steps() { run("echo deploy") }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    if: github.ref == 'refs/heads/main'
    steps:
    - id: step_0
      run: echo deploy
