tests/snapshots/cmd_generate_jobs__job_outputs_consumed_by_multiple.snap
---
source: tests/cmd_generate_jobs.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_fan_out.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/fan.ts ---
workflow("Fan Out", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    const build = ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() {
        run("cargo build")
        return { version: "1.0.0", sha: "abc123" }
      }
    })
    ctx.job("Deploy Staging", {
      runs_on: "ubuntu-latest",
      needs: [build],
      steps(ctx) {
        run(`echo deploying ${ctx.needs.build.outputs.version} to staging`)
      }
    })
    ctx.job("Deploy Production", {
      runs_on: "ubuntu-latest",
      needs: [build],
      steps(ctx) {
        run(`echo deploying ${ctx.needs.build.outputs.sha} to prod`)
      }
    })
  }
})
--- .github/workflows/generated_fan_out.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Fan Out
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    outputs:
      version: 1.0.0
      sha: abc123
    steps:
    - id: step_0
      run: cargo build
  deploy_staging:
    name: Deploy Staging
    runs-on: ubuntu-latest
    needs:
    - build
    steps:
    - id: step_0
      run: echo deploying ${{ needs.build.outputs.version }} to staging
  deploy_production:
    name: Deploy Production
    runs-on: ubuntu-latest
    needs:
    - build
    steps:
    - id: step_0
      run: echo deploying ${{ needs.build.outputs.sha }} to prod
