tests/snapshots/cmd_generate_jobs__job_runs_on_labels_array.snap
---
source: tests/cmd_generate_jobs.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: ["self-hosted", "linux", "x64"],
      steps() { run("echo hello") }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on:
    - self-hosted
    - linux
    - x64
    steps:
    - id: step_0
      run: echo hello
