tests/snapshots/cmd_generate_jobs__jobs_returns_all_defined_jobs.snap
---
source: tests/cmd_generate_jobs.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Lint", {
      runs_on: "ubuntu-latest",
      steps() { run("cargo clippy") }
    })
    ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() { run("cargo build") }
    })
    ctx.job("Test", {
      runs_on: "ubuntu-latest",
      steps() { run("cargo test") }
    })
    ctx.job("All Pass", {
      runs_on: "ubuntu-latest",
      needs: ctx.jobs(),
      if: "!cancelled()",
      steps() {
        run("exit 1", { if: "contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')" })
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  lint:
    name: Lint
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo clippy
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo build
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo test
  all_pass:
    name: All Pass
    runs-on: ubuntu-latest
    needs:
    - lint
    - build
    - test
    if: '!cancelled()'
    steps:
    - id: step_0
      run: exit 1
      if: contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')
