tests/snapshots/cmd_generate_jobs__many_jobs_chain.snap
---
source: tests/cmd_generate_jobs.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_pipeline.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/pipeline.ts ---
workflow("Pipeline", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    const lint = ctx.job("Lint", {
      runs_on: "ubuntu-latest",
      steps() { run("cargo clippy") }
    })
    const build = ctx.job("Build", {
      runs_on: "ubuntu-latest",
      needs: [lint],
      steps() {
        run("cargo build --release")
        return { artifact: "target/release/app" }
      }
    })
    const test = ctx.job("Test", {
      runs_on: "ubuntu-latest",
      needs: [build],
      steps(ctx) {
        run(`echo testing ${ctx.needs.build.outputs.artifact}`)
      }
    })
    ctx.job("Deploy", {
      runs_on: "ubuntu-latest",
      needs: [test],
      steps() { run("echo deploying") }
    })
  }
})
--- .github/workflows/generated_pipeline.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Pipeline
on:
  push:
    branches:
    - main
jobs:
  lint:
    name: Lint
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo clippy
  build:
    name: Build
    runs-on: ubuntu-latest
    needs:
    - lint
    outputs:
      artifact: target/release/app
    steps:
    - id: step_0
      run: cargo build --release
  test:
    name: Test
    runs-on: ubuntu-latest
    needs:
    - build
    steps:
    - id: step_0
      run: echo testing ${{ needs.build.outputs.artifact }}
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    needs:
    - test
    steps:
    - id: step_0
      run: echo deploying
