tests/snapshots/cmd_generate_jobs__workflow_defaults.snap
---
source: tests/cmd_generate_jobs.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  defaults: { run: { shell: "pwsh" } },
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: "windows-latest",
      steps() { run("Write-Host hello") }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
defaults:
  run:
    shell: pwsh
jobs:
  build:
    name: Build
    runs-on: windows-latest
    steps:
    - id: step_0
      run: Write-Host hello
