tests/snapshots/cmd_generate_jobs__workflow_name_returns_name.snap
---
source: tests/cmd_generate_jobs.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_my_ci_pipeline.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("My CI Pipeline", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    ctx.job("Build", {
      runs_on: "ubuntu-latest",
      steps() { run("cargo build") }
    })
    ctx.job(ctx.workflow_name() + " All Pass", {
      runs_on: "ubuntu-latest",
      needs: ctx.jobs(),
      if: "!cancelled()",
      steps() {
        run("exit 1", { if: "contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')" })
      }
    })
  }
})
--- .github/workflows/generated_my_ci_pipeline.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: My CI Pipeline
on:
  push:
    branches:
    - main
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo build
  my_ci_pipeline_all_pass:
    name: My CI Pipeline All Pass
    runs-on: ubuntu-latest
    needs:
    - build
    if: '!cancelled()'
    steps:
    - id: step_0
      run: exit 1
      if: contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')
